objects/Origination_Documentation__c.object
<CustomObject>
    <fields>
        <fullName>Key_Strengths_Risks_Weaknesses__c</fullName>
        <label>Key Strengths/Risks/Weaknesses</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LOI_C_I_Signer_Email__c</fullName>
        <formula>LOI_C_I_Signer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI C&amp;I Signer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOI_C_I_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI C&amp;I Signer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>C&amp;I</value>
            </filterItems>
            <filterItems>
                <field>User.LastName</field>
                <operation>contains</operation>
                <value>Constantine</value>
            </filterItems>
            <filterItems>
                <field>User.LastName</field>
                <operation>contains</operation>
                <value>Garrabrants</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Origination_Documentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTC_Analysis__c</fullName>
        <label>LTC Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTV_Analysis__c</fullName>
        <label>LTV Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTV_LTC__c</fullName>
        <label>LTV/LTC</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legal_Deposit__c</fullName>
        <label>Legal Deposit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Opinions__c</fullName>
        <label>Legal Opinion</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Org_Chart__c</fullName>
        <label>Legal Org Chart</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Licenses_Held_States_of_Operation__c</fullName>
        <label>Licenses Held &amp; States of Operation</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Standard_Language__c</fullName>
        <label>Loan Amount, Standard Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Fee_Percent__c</fullName>
        <formula>IF(Loan_Amount__c &gt; 0, Closing_Fee_s__c / Loan_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Legal_Structure_Org_Chart__c</fullName>
        <label>Loan/Legal Structure Org Chart</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose_Standard_Language__c</fullName>
        <label>Loan Purpose, Standard Language</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Structure__c</fullName>
        <label>Loan Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multi Draw Term</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Tape_Analysis__c</fullName>
        <label>Loan Tape Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>if(LEN(Opportunity_Name__r.Account.BillingStreet )&gt;0, Opportunity_Name__r.Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; 
if(LEN(Opportunity_Name__r.Account.BillingCity)&gt;0, Opportunity_Name__r.Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp; 
if(LEN(Opportunity_Name__r.Account.BillingState)&gt;0, Opportunity_Name__r.Account.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp; 
if(LEN(Opportunity_Name__r.Account.BillingPostalCode)&gt;0, Opportunity_Name__r.Account.BillingPostalCode,&quot;&quot;) &amp; BR() &amp; 
If(LEN(Opportunity_Name__r.Account.BillingCountry) &gt;0, Opportunity_Name__r.Account.BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location/Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>if(LEN(Contact_Name__r.MailingStreet )&gt;0, Contact_Name__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Contact_Name__r.MailingCity)&gt;0, Contact_Name__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Contact_Name__r.MailingState)&gt;0, Contact_Name__r.MailingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Contact_Name__r.MailingPostalCode)&gt;0, Contact_Name__r.MailingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Contact_Name__r.MailingCountry) &gt;0, Contact_Name__r.MailingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Background_Experience__c</fullName>
        <label>Management Background/Experience</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mandatory_Prepayments__c</fullName>
        <label>Mandatory Prepayments</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_LTC__c</fullName>
        <label>Max LTC</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_LTV__c</fullName>
        <label>Max LTV</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Misc_General_Other__c</fullName>
        <label>Misc - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Monitoring_Plan__c</fullName>
        <label>Monitoring Plan</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Monitoring_Reporting_Other__c</fullName>
        <label>Monitoring &amp; Reporting – Other</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <formula>Opportunity_Name__r.CI_NAICS_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Sources__c</fullName>
        <label>New Business Sources</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OFAC_Results_for_All_Entities__c</fullName>
        <label>OFAC Results for All Entities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Origination Documentation</relationshipLabel>
        <relationshipName>Origination_Documentation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Overview_Property_Backgrou__c</fullName>
        <description>Bridge &amp; General only</description>
        <label>Oppty Overview &amp; Property Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Overview__c</fullName>
        <label>Opportunity Overview</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Org_URL__c</fullName>
        <description>Captures the current instance&apos;s URL for use in email templates</description>
        <formula>LEFT($Api.Enterprise_Server_URL_330,FIND(&apos;.com&apos;,$Api.Enterprise_Server_URL_330)+3)</formula>
        <label>Org URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Charts_Vesting_Trees__c</fullName>
        <label>Organization Charts (Vesting Trees)</label>
        <length>3500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Organizational_Charts_General_Other__c</fullName>
        <label>Organizational Charts - General/Other</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Origination_Assignment_Diagram__c</fullName>
        <label>Origination/Assignment Diagram</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Origination_Process__c</fullName>
        <label>Origination Process</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Advance_Rates__c</fullName>
        <label>Other Advance Rates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_BCA__c</fullName>
        <label>Other BCA</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Conditions__c</fullName>
        <label>Other Conditions</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Enhancements__c</fullName>
        <label>Other Credit Enhancements</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Fee_s_Standard_Language__c</fullName>
        <label>Other Fee(s), Standard Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Fee_s__c</fullName>
        <label>Other Fee(s)</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_LOI_Conditions__c</fullName>
        <label>Other LOI Conditions</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Market_Conditions__c</fullName>
        <label>Other Market Conditions</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Marktet_Conditions__c</fullName>
        <label>Market Conditions Other</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_PMR__c</fullName>
        <label>Other PMR</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_P_G__c</fullName>
        <label>Other P&amp;G</label>
        <length>3500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Reporting_Requirements__c</fullName>
        <label>Other Reporting Requirements</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Terms_Conditions_Standard_Language__c</fullName>
        <label>Other Terms/Conditions,Standard Language</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Terms_Conditions__c</fullName>
        <label>Other Terms/Conditions</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Terms__c</fullName>
        <label>Other Terms</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Third_Parties__c</fullName>
        <label>Other Third Parties</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>3500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PFS_Analysis__c</fullName>
        <label>PFS Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PIC_1st_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIC - 1st Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_2nd_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIC - 2nd Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_Approval__c</fullName>
        <label>PIC Approval</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_Fields_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIC Fields Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Documentation</relationshipLabel>
        <relationshipName>Origination_Documentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_s_Background__c</fullName>
        <label>Participant(s) Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Participant_s_Other__c</fullName>
        <label>Participant(s) Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Participant_s__c</fullName>
        <label>Participant(s)</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Participating_Lender_Standard_Language__c</fullName>
        <label>Participating Lender, Standard Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participating_Lenders__c</fullName>
        <label>Participating Lenders</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participations_and_Assignments__c</fullName>
        <label>Participations and Assignments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
                <value>
                    <fullName>Interest Only with Release Prices</fullName>
                </value>
                <value>
                    <fullName>Amortizing (P&amp;I)</fullName>
                </value>
                <value>
                    <fullName>Fixed Principal plus Interest (P+I)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Capita_Income__c</fullName>
        <label>Per Capita Income</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pictures_Attachments__c</fullName>
        <label>Pictures/Attachments</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Policy_Exceptions__c</fullName>
        <label>Policy Exceptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Population_Growth__c</fullName>
        <label>Population Growth</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Portfolio_Monitoring__c</fullName>
        <label>Portfolio Monitoring</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Portfolio_Overview_General_Other__c</fullName>
        <label>Portfolio Overview - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_Close_Conditions__c</fullName>
        <label>Post-Close Conditions</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_Funding_Conditions__c</fullName>
        <label>Post-Funding Conditions</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_Funding_Monitoring_Other__c</fullName>
        <label>Post-Funding Monitoring Other</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_Close_Conditions__c</fullName>
        <label>Pre-Close Conditions</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prepayment_Penalty_Exit_Fee__c</fullName>
        <label>Prepayment Penalty/Exit Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prepayment_Penalty_Standard_Language__c</fullName>
        <label>Prepayment Penalty, Standard Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prepayment_Penalty__c</fullName>
        <description>Lender Finance only</description>
        <label>Prepayment Penalty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Trends__c</fullName>
        <label>Pricing Trends</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Activity_ies__c</fullName>
        <label>Primary Business Activity(ies)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Exit_Strategies__c</fullName>
        <label>Primary Exit Strategies</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Guarantor_Name__c</fullName>
        <formula>Opportunity_Name__r.CI_Primary_Guarantor_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Guarantor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_s_Background__c</fullName>
        <label>Principal(s) Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Principal_s_Bio_s_Resume_s__c</fullName>
        <label>Principal(s) Bio(s) / Resume(s)</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Principal_s_Guarantor_s__c</fullName>
        <label>Principal(s) &amp; Guarantor(s)</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Principals_Guarantors_General_Other__c</fullName>
        <label>Principals/Guarantors - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT( Opportunity_Name__r.CI_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Background__c</fullName>
        <label>Project Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Projected_Close_Date__c</fullName>
        <formula>Opportunity_Name__r.CI_Projected_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projection_Analysis__c</fullName>
        <label>Projection Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Description_General_Other__c</fullName>
        <label>Property Description - General/Other</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_History__c</fullName>
        <label>Property History</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Summary__c</fullName>
        <label>Property Summary</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Funds_Request_Rationale__c</fullName>
        <label>Purpose of Funds/Request Rationale</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Underlying_Loan__c</fullName>
        <label>Purpose of Underlying Loan</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rating_Matrix__c</fullName>
        <label>Rating Matrix</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reason_for_Financing__c</fullName>
        <label>Reason for Financing</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Exposure__c</fullName>
        <description>This field should only have a value if the Existing Client field = Yes</description>
        <inlineHelpText>This field should only have a value if the Existing Client field = Yes</inlineHelpText>
        <label>Related Exposure</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_Price_Description__c</fullName>
        <label>Release Price Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_Negative_Media_Found__c</fullName>
        <inlineHelpText>Internet, Google Results, Yahoo, etc.</inlineHelpText>
        <label>Relevant Negative Media Found</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Modification_ReWrite_Policy__c</fullName>
        <label>Renewal/Modification/ReWrite Policy</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Repayment_Exit_Strategy__c</fullName>
        <label>Repayment/Exit Strategy</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repurchase_Price__c</fullName>
        <label>Repurchase Price</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Repurchase_Requirement__c</fullName>
        <label>Repurchase Requirement</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirements_for_Project_Financing_Exit__c</fullName>
        <label>Requirements for Project/Financing Exit</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reserves_Write_offs__c</fullName>
        <label>Reserves &amp; Write-offs</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 – High Pass</fullName>
                </value>
                <value>
                    <fullName>2 – Pass</fullName>
                </value>
                <value>
                    <fullName>3 – Pass</fullName>
                </value>
                <value>
                    <fullName>4 – Low Pass</fullName>
                </value>
                <value>
                    <fullName>5 – Special Mention</fullName>
                </value>
                <value>
                    <fullName>6 – Sub Standard</fullName>
                </value>
                <value>
                    <fullName>7 – Sub Standard, Non-Accrual</fullName>
                </value>
                <value>
                    <fullName>8 – Doubtful</fullName>
                </value>
                <value>
                    <fullName>9 – Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risks_Mitigants__c</fullName>
        <label>Risks &amp; Mitigants</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Servicing_Servicer__c</fullName>
        <label>Servicing/Servicer</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Servicing__c</fullName>
        <label>Servicing</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sources_Uses_General_Other__c</fullName>
        <label>Sources &amp; Uses - General/Other</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sources_Uses__c</fullName>
        <label>Sources &amp; Uses</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sources_of_Repayment__c</fullName>
        <label>Sources of Repayment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_s_Background__c</fullName>
        <description>Lender Finance only</description>
        <label>Sponsor(s) Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strategy_Overview_and_Summary__c</fullName>
        <label>Strategy Overview and Summary</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths_Weaknesses_Mitigants__c</fullName>
        <label>Strengths, Weaknesses &amp; Mitigants</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stress_Case_Static_Wind_Down__c</fullName>
        <label>Stress Case Static Wind-Down</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summarize_Negative_Media_Findings__c</fullName>
        <label>Summarize Negative Media Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Financial_Analysis__c</fullName>
        <label>Summary Financial Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary_of_Development_Experience__c</fullName>
        <label>Summary of Development Experience</label>
        <length>7500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Background_General_Other__c</fullName>
        <label>Transaction Background - General/Other</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Overview_General_Other__c</fullName>
        <label>Transaction Overview - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Overview_Loan_Purpose__c</fullName>
        <label>Transaction Overview - Loan Purpose</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Recap__c</fullName>
        <label>Transaction Recap</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Summary__c</fullName>
        <label>Transaction Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trends_Ratios__c</fullName>
        <label>Trends &amp; Ratios</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Underlying_Borrower_General_Other__c</fullName>
        <label>Underlying Borrower - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Underlying_Borrower_Profile__c</fullName>
        <label>Underlying Borrower Profile</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Underlying_Loan_Terms__c</fullName>
        <label>Underlying Loan Terms</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Underwriting_Standards_and_Process__c</fullName>
        <label>Underwriting Standards and Process</label>
        <length>7500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Use_of_Proceeds__c</fullName>
        <label>Use of Proceeds</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Uses_of_Funds__c</fullName>
        <label>Uses of Funds</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wind_Down_Period__c</fullName>
        <label>Wind Down Period</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <label>Origination Documentation</label>
    <nameField>
        <displayFormat>ORG-{0000000}</displayFormat>
        <label>Origination Documentation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Origination Documentation</pluralLabel>
    <recordTypes>
        <fullName>CAM_AB_Participation</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - AB Participation CAMs.</description>
        <label>CAM - AB Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAM_Bridge</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - Bridge CAMs.</description>
        <label>CAM - Bridge</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAM_General</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - General CAMs.</description>
        <label>CAM - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAM_Lender_Finance</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - Lender Finance CAMs.</description>
        <label>CAM - Lender Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_AB_Participation</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - AB Participation LOIs.</description>
        <label>LOI - AB Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_Bridge</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - Bridge LOIs.</description>
        <label>LOI - Bridge</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_General</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - General LOIs.</description>
        <label>LOI - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_Lender_Finance</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - Lender Finance LOIs.</description>
        <label>LOI - Lender Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIC_AB_Participation</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - AB Participation PICs.</description>
        <label>PIC - AB Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIC_Bridge</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - Bridge PICs.</description>
        <label>PIC - Bridge</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIC_General</fullName>
        <active>true</active>
        <description>Use this record type for C&amp;I - General PICs.</description>
        <label>PIC - General</label>
    </recordTypes>
</CustomObject>